general garbage collection implemented, but only tested for a really simple case

--- a/Doc/Doc.tex
+++ b/Doc/Doc.tex
@@ -443,7 +443,7 @@
 				
 				\begin{align*}
 					\drmrule{(\mc{id},\_,m)\in S}{S}{A}{\mc{id}}{ExpAssnId},\ \ 
-					\drmrule{}{S}{A}{\mc{e1[e2]}}{ExpAssnSub}
+					\drmrule{S\ruleapp{A}\mc{e1}}{S}{A}{\mc{e1[e2]}}{ExpAssnSub}
 				\end{align*}
 				
 			\subsubsection{Global Expressions}
