--- a/Doc/Doc.tex
+++ b/Doc/Doc.tex
@@ -141,12 +141,21 @@ fn main -> void
 			\midrule
 			\code{**} & Exponentiation & 90 & right & \code{int,int -> int}\\
 				&&&& \code{flt,flt -> flt}\\
+				&&&& \code{int,flt -> flt}\\
+				&&&& \code{flt,int -> flt}\\
 			\midrule
-			\code{*} & Multiplication & 80 & left & \code{int,int -> int}\\
+			\code{*} & Multiplication & 80 & left &
+					 \code{int,int -> int}\\
 				&&&& \code{flt,flt -> flt}\\
+				&&&& \code{int,flt -> flt}\\
+				&&&& \code{flt,int -> flt}\\
 			\midrule
-			\code{+},\code{-} & Addition & 70 & left & \code{int,int -> int}\\
-				& Subtraction &&& \code{flt,flt -> flt}\\
+			\code{+},\code{-} & Addition & 70 & left &
+					 \code{int,int -> int}\\
+				& Subtraction &&&
+					 \code{flt,flt -> flt}\\
+				&&&& \code{int,flt -> flt}\\
+				&&&& \code{flt,int -> flt}\\
 				&&&& \code{char,int -> char}\\
 				&&&& \code{int,char -> char}\\
 			\midrule
@@ -160,8 +169,8 @@ fn main -> void
 			\midrule
 			\code{|} & Bitwise Or & 40 & left & \code{int,int -> int}\\
 			\midrule
-			\code{=},\code{!=},\code{>},\code{<},\code{>=},\code{<=} & Comparison & 30 & non-assoc. & \code{[int] -> bool} \\
-				&&&& \code{[flt] -> bool}\\
+			\code{=},\code{!=},\code{>},\code{<},\code{>=},\code{<=} & Comparison & 30 & non-assoc. & \code{[int/flt] -> bool} \\
+				&&&& \code{[char/int] -> bool}\\
 			\midrule
 			\code{\&\&} & Logical And & 20 & left & \code{bool,bool -> bool}\\
 			\midrule
@@ -357,15 +366,19 @@ fn main -> void
 				\subsubsubsection{Power}
 				
 					\begin{align*}
-						\drmrule{}{}{O}{\mc{**} :: \mc{(int,int)->int}}{TyBopPowInt},\ \ 
-						\drmrule{}{}{O}{\mc{**} :: \mc{(flt,flt)->flt}}{tyBopPowFlt}
+						\drmrule{}{}{O}{\mc{**} :: \mc{(int,int)->int}}{TyBopPowInt},\ \ &
+						\drmrule{}{}{O}{\mc{**} :: \mc{(flt,flt)->flt}}{TyBopPowFlt}\\
+						\drmrule{}{}{O}{\mc{**} :: \mc{(int,flt)->flt}}{TyBopPowIntFlt},\ \ &
+						\drmrule{}{}{O}{\mc{**} :: \mc{(flt,int)->flt}}{TybopPowFltInt}
 					\end{align*}
 				
 				\subsubsubsection{Multiplication}
 				
 					\begin{align*}
-						\drmrule{}{}{O}{\mc{*} :: \mc{(int,int)->int}}{TyBopMulInt},\ \ 
-						\drmrule{}{}{O}{\mc{*} :: \mc{(flt,flt)->flt}}{TyBopMulInt}
+						\drmrule{}{}{O}{\mc{*} :: \mc{(int,int)->int}}{TyBopMulInt},\ \ &
+						\drmrule{}{}{O}{\mc{*} :: \mc{(flt,flt)->flt}}{TyBopMulInt}\\
+						\drmrule{}{}{O}{\mc{*} :: \mc{(int,flt)->flt}}{TyBopMulIntFlt},\ \ &
+						\drmrule{}{}{O}{\mc{*} :: \mc{(flt,int)->flt}}{TybopMulFltInt}
 					\end{align*}
 				
 				\subsubsubsection{Addition and Subtraction}
@@ -375,6 +388,8 @@ fn main -> void
 							\begin{align*}
 								\drmrule{}{}{O}{\mc{+} :: \mc{(int,int)->int}}{TyBopAddInt},\ \ &
 								\drmrule{}{}{O}{\mc{+} :: \mc{(flt,flt)->flt}}{TyBopAddFlt},\\
+								\drmrule{}{}{O}{\mc{+} :: \mc{(int,flt)->flt}}{TyBopAddIntFlt},\ \ & 
+								\drmrule{}{}{O}{\mc{+} :: \mc{(flt,int)->flt}}{TyBopAddFltInt}\\
 								\drmrule{}{}{O}{\mc{+} :: \mc{(int,char)->char}}{TyBopAddCharR},\ \ &
 								\drmrule{}{}{O}{\mc{+} :: \mc{(char,int)->char}}{TyBopAddCharL}
 							\end{align*}
@@ -382,6 +397,8 @@ fn main -> void
 							\begin{align*}
 								\drmrule{}{}{O}{\mc{-} :: \mc{(int,int)->int}}{TyBopSubInt},\ \ &
 								\drmrule{}{}{O}{\mc{-} :: \mc{(flt,flt)->flt}}{TyBopSubFlt},\\
+								\drmrule{}{}{O}{\mc{-} :: \mc{(int,flt)->flt}}{TyBopSubIntFlt},\ \ & 
+								\drmrule{}{}{O}{\mc{-} :: \mc{(flt,int)->flt}}{TBbopSubFltInt}\\
 								\drmrule{}{}{O}{\mc{-} :: \mc{(int,char)->char}}{TyBopSubCharR},\ \ &
 								\drmrule{}{}{O}{\mc{-} :: \mc{(char,int)->char}}{TyBopSubCharL}
 							\end{align*}
